docker-compose.yml build fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: stats-server
+    build: stats/stats-server
     image: stats-server
     container_name: stats_server_container
     ports:
@@ -22,7 +22,7 @@ services:
       - POSTGRES_PASSWORD=postgres
 
   ewm-service:
-    build: ewm-service
+    build: main-service
     image: ewm-service
     container_name: ewm-service
     ports:
