--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.sql.init.mode=always
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-logging.level.org.springframework.orm.jpa=DEBUG
-logging.level.org.springframework.transaction=DEBUG
-logging.level.org.springframework.transaction.interceptor=DEBUG
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.orm.jpa=WARN
+logging.level.org.springframework.transaction=WARN
+logging.level.org.springframework.transaction.interceptor=WARN
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=WARN
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
